<resources>
    <string name="app_name">Profeta</string>
    <string name="welcome_app">Welcome</string>
    <string name="title_activity_main" translatable="false">Profeta da bola</string>

    <string name="USERNAME_ADMIN" translatable="false">android</string>
    <string name="PASSWORD_ADMIN" translatable="false">mobile</string>

    <!-- Menu-->
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_title_application" translatable="false">Application</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>

    <!-- About-->
    <string name="title_activity_about">About</string>
    <string name="label_contato">Contact</string>
    <string name="label_numero_contato" translatable="false">+55 (11) 99650-9610</string>
    <string name="label_copyright" translatable="false">Copyright © 2017 by Rafael Valverde</string>

    <!-- Games -->
    <string name="divider_vs" translatable="false">x</string>

    <!-- Maps -->
    <string name="title_activity_maps">Map</string>
    <string name="message_no_locality" translatable="false">Could not find location</string>

    <!-- Sign in -->
    <string name="button_sign_in">Sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="empty_email">The email field is empty</string>
    <string name="empty_password">The password field is empty</string>
    <string name="error_incorrect_signin">Incorrect user and/or password</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>

    <!--Facebook-->
    <string name="facebook_app_id" translatable="false">1967298820151628</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1967298820151628</string>
    <string name="error_conection_login">There was a problem, please try again later</string>
    <string name="cancel_conection_login">Access has been revoked</string>
    <string name="action_share">Share</string>
    <string name="stadium_more" translatable="false">+ STADIUM</string>

    <string name="error_conection_sync_user" translatable="false">Ocorreu uma falha no sync de user.</string>

</resources>
