<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context="com.profetadabola.about.AboutActivity">

    <TextView
        android:id="@+id/textview_name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/about_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textview_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="versão X.X.X"
        android:layout_below="@+id/textview_name_app"
        android:layout_centerHorizontal="true"  />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_marginTop="@dimen/about_margin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/img_splash_profeta"
        android:layout_below="@+id/textview_version"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textview_label_contato"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/about_margin"
        android:layout_height="wrap_content"
        android:text="@string/label_contato"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/button_call"
        android:layout_height="wrap_content"
        android:text="@string/label_numero_contato"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/textview_label_contato"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textview_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/label_copyright" />

</RelativeLayout>
