<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash_profeta"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.profetadabola.signIn.SignInActivity">

    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="74dp"
        android:layout_height="82dp"
        android:layout_marginBottom="@dimen/imageView_signin"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/imageView_signin"
        android:src="@drawable/img_splash_profeta"/>

    <FrameLayout
        android:id="@+id/fragment_content_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/signin_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="?android:attr/textColorHintInverse"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/edit_text_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/editText_margin_bottom"
                        android:hint="@string/hint_username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColorHint="@color/gray"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="?android:attr/textColorHintInverse"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/backgroundSignin">

                    <EditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/editText_margin_bottom"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColorHint="@color/gray"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_signin"
                    style="@style/AppTheme.Button.GameAction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/button_sign_in"
                    android:textStyle="bold" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="0.13" />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>
